objects/MEMS__c.object
<CustomObject>
    <fields>
        <fullName>BX_041__c</fullName>
        <label>BX-041</label>
        <referenceTo>BX_041__c</referenceTo>
        <relationshipLabel>MEMS</relationshipLabel>
        <relationshipName>MEMS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MEMS_Name__c</fullName>
        <label>MEMS Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Others__c</fullName>
        <label>Others</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Metadata__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Metadata</label>
        <referenceTo>Question_Metadata__c</referenceTo>
        <relationshipLabel>MEMS</relationshipLabel>
        <relationshipName>MEMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MEMS</label>
    <nameField>
        <displayFormat>MEMS-{00000}</displayFormat>
        <label>MEMS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MEMS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>